# olpat

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  404.html  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  deny.toml  docker-bake.hcl  editor.html  hashmap.json  index.html  pyproject.toml
.github/workflows/: ci.yaml  releases-pypi.yaml  releases.yaml  site.yaml
assets/: cli_installation_binary.md.2765dbba.js  cli_installation_binary.md.2765dbba.lean.js  cli_installation_cargo.md.345188ce.js  cli_installation_cargo.md.345188ce.lean.js  cli_installation_docker.md.f7545d3f.js  cli_installation_docker.md.f7545d3f.lean.js  cli_installation_homebrew.md.c179613c.js  cli_installation_homebrew.md.c179613c.lean.js  cli_installation_npm.md.7d4569d3.js  cli_installation_npm.md.7d4569d3.lean.js  cli_introduction.md.d0c10b27.js  cli_introduction.md.d0c10b27.lean.js  cli_usage_configuration.md.46a89bb5.js  cli_usage_configuration.md.46a89bb5.lean.js  cli_usage_conversion-and-extraction.md.c8a7472c.js  cli_usage_conversion-and-extraction.md.c8a7472c.lean.js  cli_usage_formatting.md.2562cdcb.js  cli_usage_formatting.md.2562cdcb.lean.js  cli_usage_language-server.md.820b0340.js  cli_usage_language-server.md.820b0340.lean.js  cli_usage_validation.md.5c6578f7.js  cli_usage_validation.md.5c6578f7.lean.js  configuration_developing-schemas.md.24ab6d7f.js  configuration_developing-schemas.md.24ab6d7f.lean.js  configuration_developing-schemas.md.cf2fecc4.js  configuration_developing-schemas.md.cf2fecc4.lean.js  configuration_directives.md.056a001f.js  configuration_directives.md.056a001f.lean.js  configuration_file.md.7cc356ba.js  configuration_file.md.7cc356ba.lean.js  editor.md.f13f456f.js  index.md.62206cec.lean.js  index.md.ef19bf6a.lean.js  lib_introduction.md.cfb9a341.js  lib_introduction.md.cfb9a341.lean.js  lib_javascript_lib.md.4da557a2.lean.js  lib_javascript_lsp.md.9a4cc09a.js  lib_rust_olpat-common.md.33b30b54.js  lib_rust_olpat-common.md.33b30b54.lean.js  lib_rust_olpat-common.md.ceadded9.js  (+5 more)
cli/: introduction.html
cli/installation/: binary.html  cargo.html  docker.html  homebrew.html  npm.html
cli/usage/: configuration.html  conversion-and-extraction.html  formatting.html  language-server.html  validation.html
configuration/: developing-schemas.html  directives.html  file.html  formatter-options.html  using-schemas.html
crates/lsp-async-stub/: README.md
crates/olpat/: Cargo.toml
crates/olpat-cli/: Cargo.toml
crates/olpat-cli/src/: args.rs  lib.rs  printing.rs
crates/olpat-cli/src/commands/: config.rs  format.rs  lint.rs  lsp.rs  mod.rs  queries.rs  toml_test.rs
crates/olpat-common/: Cargo.toml
crates/olpat-common/src/: config.rs  convert.rs
crates/olpat-common/src/schema/: associations.rs  mod.rs
crates/olpat-lsp/: Cargo.toml  README.md
crates/olpat-lsp-async-stub/: Cargo.toml
crates/olpat-lsp/src/: config.rs  diagnostics.rs  lib.rs  query.rs  world.rs
crates/olpat-lsp/src/handlers/: completion.rs  configuration.rs  conversion.rs  document_symbols.rs  documents.rs  folding_ranges.rs  formatting.rs  hover.rs  initialize.rs  links.rs  rename.rs  schema.rs  semantic_tokens.rs  workspaces.rs
crates/olpat-wasm/: Cargo.toml
crates/olpat-wasm/src/: environment.rs  lib.rs  lsp.rs
crates/olpat/benches/: olpat.rs  profile.rs
crates/olpat/examples/: parse.rs
crates/olpat/src/: lib.rs
crates/olpat/src/dom/node/: nodes.rs
crates/olpat/src/tests/: formatter.rs  mod.rs
docker/alpine/: Dockerfile
editors/vscode/: CHANGELOG.md  README.md  package.json
editors/vscode/src/: client.ts  extension.ts  server-worker.ts  server.ts
editors/vscode/src/commands/: conversion.ts  schema.ts
editors/vscode/src/syntax/: comment.ts
editors/vscode/src/syntax/literal/: boolean.ts  index.ts
js/cli/: package.json
js/cli/src/: cli.ts
js/cli/util/: add_shebang.js
js/core/: package.json
js/core/src/: index.ts
js/lib/: package.json
js/lib/src/: index.ts
js/lsp/: package.json
js/lsp/src/: index.ts
lib/: introduction.html  javascript.html
lib/javascript/: lib.html  lsp.html
lib/rust/: olpat-common.html  olpat-lsp.html  olpat.html  taplo-common.html  taplo-lsp.html  taplo.html
scripts/: set-dev-version.sh
site/site/: editor.md  index.md
site/site/.vitepress/: config.ts
site/site/.vitepress/components/: Home.vue
site/site/cli/: introduction.md
site/site/cli/installation/: binary.md  cargo.md  docker.md  homebrew.md  npm.md
site/site/cli/usage/: configuration.md  conversion-and-extraction.md  formatting.md  language-server.md  validation.md
site/site/configuration/: developing-schemas.md  directives.md  file.md
site/site/lib/: introduction.md
site/site/lib/javascript/: lib.md  lsp.md
site/site/lib/rust/: olpat-common.md  olpat-lsp.md  olpat.md  taplo-lsp.md
test-data/analytics/: _cargo1.toml  _cargo2.toml  _cargo3.toml
util/test-gen/: README.md
