[build-system]
requires      = ["maturin>=1.4"]
build-backend = "maturin"

[project]
name            = "olpat"
description     = "A CLI for the olpat TOML toolkit (a maintained fork of taplo)"
authors         = [{ name = "tamasfe" }, { name = "weichweich" }]
maintainers     = [{ name = "weichweich" }]
requires-python = ">=3.8"
dynamic         = ["version"]

keywords = [
  "toml",
  "linter",
  "formatter",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage      = "https://github.com/weichweich/olpat"
Documentation = "https://docs.olpat.eu"
Repository    = "https://github.com/weichweich/olpat.git"
Tracker       = "https://github.com/weichweich/olpat/issues"
Changelog     = "https://github.com/weichweich/olpat/blob/master/crates/olpat-cli/CHANGELOG.md"

[tool.maturin]
bindings      = "bin"
manifest-path = "crates/olpat-cli/Cargo.toml"
