[package]
name         = "olpat-lsp"
description  = "Language server for olpat (a maintained fork of taplo)"
version      = "0.8.0"
rust-version = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default    = ["rustls-tls"]
native-tls = ["olpat-common/native-tls"]
rustls-tls = ["olpat-common/rustls-tls"]

[dependencies]
lsp-async-stub = { version = "0.7.0", path = "../lsp-async-stub" }
olpat          = { version = "0.14.0", path = "../olpat", features = ["serde"] }
olpat-common   = { version = "0.6.0", path = "../olpat-common", features = ["schema", "reqwest"] }

anyhow      = { workspace = true }
arc-swap    = { workspace = true }
either      = { workspace = true }
figment     = { version = "0.10.6", features = ["json"] }
futures     = { workspace = true }
indexmap    = { workspace = true, features = ["serde"] }
itertools   = { workspace = true }
lsp-types   = { version = "0.93.0", features = ["proposed"] }
once_cell   = { workspace = true }
parking_lot = { workspace = true }
regex       = { workspace = true }
reqwest     = { workspace = true, features = ["json"] }
schemars    = { workspace = true }
serde       = { workspace = true, features = ["derive"] }
serde_json  = { workspace = true, features = ["preserve_order"] }
tap         = { workspace = true }
time        = { workspace = true, features = ["formatting", "parsing"] }
toml        = { workspace = true }
tracing     = { workspace = true }

[package.metadata.auto-tag]
enabled = true
