[package]
name         = "olpat-wasm"
version      = "0.2.1"
publish      = false
rust-version = { workspace = true }
authors      = { workspace = true }
edition      = { workspace = true }
homepage     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
olpat-lsp-async-stub = { path = "../olpat-lsp-async-stub" }
olpat          = { path = "../olpat" }
olpat-cli      = { path = "../olpat-cli", optional = true, default-features = false }
olpat-common   = { path = "../olpat-common", default-features = false, features = ["rustls-tls", "schema", "reqwest"] }
olpat-lsp      = { path = "../olpat-lsp", optional = true, default-features = false }

anyhow                   = { workspace = true }
async-trait              = { workspace = true }
clap                     = { workspace = true, features = ["derive"] }
console_error_panic_hook = { version = "0.1.7" }
futures                  = { workspace = true }
getrandom                = { workspace = true, features = ["js"] }
indexmap                 = { workspace = true }
serde                    = { workspace = true, features = ["derive"] }
serde-wasm-bindgen       = { version = "0.6.5" }
serde_json               = { workspace = true }
time                     = { workspace = true, features = ["parsing"] }
tokio                    = { workspace = true }
tracing                  = { workspace = true }
url                      = { workspace = true }

# Bump all together since it's a monorepo
js-sys               = { version = "0.3.72" }
wasm-bindgen         = { version = "0.2.95" }
wasm-bindgen-futures = { version = "0.4.45" }

[features]
default = ["cli", "lsp"]
cli     = ["olpat-cli"]
lsp     = ["olpat-lsp"]
